# lua-zlib

./: .gitignore  .luacheckrc  CMakeLists.txt  LICENCE  Makefile  README  README.md  lua-zlib-0.5-0.rockspec  lua-zlib-1.0-0.rockspec  lua-zlib-1.1-0.rockspec  lua-zlib-scm-0.rockspec  lua_zlib.c  lua_zlib.mk  module.mk  rockspec  tap.lua  test.lua
.github/workflows/: luacheck.yml  test.yml
rockspecs/: lua-zlib-0.3-0.rockspec  lua-zlib-0.4-1.rockspec  lua-zlib-0.5-0.rockspec  lua-zlib-1.2-1.rockspec  lua-zlib-1.2-2.rockspec  lua-zlib-1.2-3.rockspec  lua-zlib-1.3-0.rockspec
rockspecs/lua-zlib-git/: lua-zlib-git-2014.02.19-1.rockspec
